--- a/templates/base.html
+++ b/templates/base.html
@@ -294,6 +294,9 @@
                             <a class="dropdown-item" href="/contact/rombooking/">Rombooking</a>
                         </div>
                     </li>
+                    <li class="nav-item mr-1 ">
+                        <a class="nav-link text-light" href="/contact/for_bedrifter/">For bedrifter</a>
+                    </li>
                 </ul>
 
                 {# end navigasjonslenker #}
