--- a/nablapps/contact/templates/contact/for_bedrifter.html
+++ b/nablapps/contact/templates/contact/for_bedrifter.html
@@ -15,19 +15,18 @@
 
         <div class="flex-grow-1 card card-body card-body-overline">
             <strong style="text-align:center">Bedriftspresentasjon</strong>
-            <p>En bedriftspresentasjon går ut på at bedriften presenterer seg selv for Nablas studenter. Dette er en gyllen mulighet til å gjøre studentene bevisst på hvem dere er, hva dere tilbyr, og hvordan dere jobber. En bedriftspresentasjon er gjerne etterfulgt av en bespisning i en av Glshaugens kan-
-                tiner eller en restaurant i Trondheim sentrum. Bespisning er ikke nødvendig,
+            <p>En bedriftspresentasjon går ut på at bedriften presenterer seg selv for Nablas studenter. Dette er en gyllen mulighet til å gjøre studentene bevisst på hvem dere er, hva dere tilbyr, og hvordan dere jobber. En bedriftspresentasjon er gjerne etterfulgt av en bespisning i en av Gløshaugens kantiner eller en restaurant i Trondheim sentrum. Bespisning er ikke nødvendig,
                 men trekker erfaringsmessig 
-                ere studenter til presentasjonen, og gir dessuten mulighet for ytterligere kontakt og dialog mellom bedriften og studentene. Bedriftskontakten Nabla planlegger og gjennomfører alt av booking av rom, bespisning, transport
+                fere studenter til presentasjonen, og gir dessuten mulighet for ytterligere kontakt og dialog mellom bedriften og studentene. Bedriftskontakten Nabla planlegger og gjennomfører alt av booking av rom, bespisning, transport
                 og andre behov. Vi kan dessuten åpne bedriftspresentasjonen for studenter fra andre studier. Reklame og informasjon for bedriftspresentasjonen blir publisert i forkant på studiet sine grupper på Facebook, BN sin Facebookside, Nablas
-                egne nettsider og eventuelt plakater på Glæshaugen om ønskelig. </p>
+                egne nettsider og eventuelt plakater på Gløshaugen om ønskelig. </p>
         </div>
 
         <div class="flex-grow-1 card card-body card-body-overline">
             <strong style="text-align:center">Kurs/Casework</strong>
             <p>Et kurs er et faglig arrangement hvor fokuset skal være på å introdusere studentene for faglige erfaringer som de kan få bruk for i arbeidslivet. Det kan også være
                 kurs i noe bedriften gjerne ønsker bredere kompetanse i; kurs i ledelse, bruk
-                av excel, engelsk forretningsspråk for å nevne noe. En kurs kan gjerne etterfølges av Casework. Bedriften kan
+                av excel, engelsk forretningsspråk for å nevne noe. Et kurs kan gjerne etterfølges av Casework. Bedriften kan
                 for eksempel gi ut en problemstilling som de ønsker å høre tanker om som
                 studentene så kan jobbe i team for å løse. Et annet alternativ kan være "en
                 arbeidsdag i bedriften" hvor studentene går fra post til post og får en dypere
