fix: typo and comment out unused class

--- a/nablapps/contact/templates/contact/for_bedrifter.html
+++ b/nablapps/contact/templates/contact/for_bedrifter.html
@@ -17,7 +17,7 @@
             <strong style="text-align:center">Bedriftspresentasjon</strong>
             <p>En bedriftspresentasjon går ut på at bedriften presenterer seg selv for Nablas studenter. Dette er en gyllen mulighet til å gjøre studentene bevisst på hvem dere er, hva dere tilbyr, og hvordan dere jobber. En bedriftspresentasjon er gjerne etterfulgt av en bespisning i en av Gløshaugens kantiner eller en restaurant i Trondheim sentrum. Bespisning er ikke nødvendig,
                 men trekker erfaringsmessig 
-                fere studenter til presentasjonen, og gir dessuten mulighet for ytterligere kontakt og dialog mellom bedriften og studentene. Bedriftskontakten Nabla planlegger og gjennomfører alt av booking av rom, bespisning, transport
+                flere studenter til presentasjonen, og gir dessuten mulighet for ytterligere kontakt og dialog mellom bedriften og studentene. Bedriftskontakten Nabla planlegger og gjennomfører alt av booking av rom, bespisning, transport
                 og andre behov. Vi kan dessuten åpne bedriftspresentasjonen for studenter fra andre studier. Reklame og informasjon for bedriftspresentasjonen blir publisert i forkant på studiet sine grupper på Facebook, BN sin Facebookside, Nablas
                 egne nettsider og eventuelt plakater på Gløshaugen om ønskelig. </p>
         </div>
