--- a/nablapps/interactive/templates/interactive/code_golf.html
+++ b/nablapps/interactive/templates/interactive/code_golf.html
@@ -82,7 +82,7 @@ function builtinRead(x) {
              status: null,  // One of "correct", "incorrect", "spinning"
              user_code: null,
              output: null,
-             longerThanBest: null
+             longerThanBest: false
          }
      },
      methods: {
