--- a/templates/base.html
+++ b/templates/base.html
@@ -176,14 +176,14 @@
                             Vi har et heidundranes fadderopplegg som vi håper du vil ta del i!
                             Det er derfor veldig viktig at du trykker på knappen under og melder deg på!
                         </p>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd2yKA-N1dtutTU_9U07u4xJwddl6NNQC1UrcQmyhAC1hXZpQ/viewform?usp=pp_url"
+                        <a href="https://forms.gle/7Gg3VFQ3UcesvjJq8"
                            class="btn btn-nabla-blue-dark btn-lg btn-block my-1"
                            style="white-space:normal">
-                            Trykk her for påmelding til fadderperioden - <b>2022!</b>
+                            Trykk her for påmelding til fadderperioden - <b>2023!</b>
                         </a>
                         <p>
                             Påmeldingen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette!
-                            Gjør dette nå, og så kan du lese resten av informasjonen senere.
+                            Gjør dette nå, så kan du lese resten av informasjonen senere.
                         </p>
                         <!--<a href="https://nabla.no/brukere/registrer/"-->
                                <!--    class="btn btn-nabla-blue-dark btn-lg btn-block my-1"-->
@@ -191,9 +191,9 @@
                                <!--    Trykk her for å registrere deg en bruker på <b>Nabla.no</b>-->
                         <!--</a>-->
                         <div class="list-group">
-                            <a href="https://www.facebook.com/groups/659653052004839/?ref=share"
+                            <a href="https://www.facebook.com/groups/185404571051393/"
                                class="btn btn-nabla-blue-dark btn-lg btn-block my-1">
-                                Meld deg også inn i facebook-gruppen for fadderperioden 2022 ved å trykke her.
+                                Meld deg også inn i facebook-gruppen for fadderperioden 2023 ved å trykke her.
                             </a>
                             <a href="nystudent" class="btn btn-nabla-blue-dark btn-lg btn-block my-1">
                                 Mer informasjon om fadderopplegget finner du ved å trykke her.
@@ -204,10 +204,10 @@
                         </div>
                         <br>
 
-                        <img src="https://nabla.no/media/uploads/content/290727792_445544520395749_2294370337603763815_n.png" style="width: 100%;">
+                        <img src="https://nabla.no/media/uploads/content/fadderukekalender-riktig.jpg" style="width: 100%;">
 
                         <small>
-                            Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla.
+                            Grunnet personvernsreglene i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla.
                             Derfor må du som ny student oppgi kontaktopplysninger selv.
                         </small>
                     </div>
