--- a/templates/base.html
+++ b/templates/base.html
@@ -297,6 +297,11 @@
                     <li class="nav-item mr-1 ">
                         <a class="nav-link text-light" href="/contact/for_bedrifter/">For bedrifter</a>
                     </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item mr-1 ">
+                        <a class="nav-link text-light" href="/application/">Søk undergruppe</a>
+                    </li>
+                    {% endif %}
                 </ul>
 
                 {# end navigasjonslenker #}
