fix: replaced ifequal-tags with normal if-tags as per ref: https://docs.djangoproject.com/en/3.2/ref/templates/builtins/#ifequal-and-ifnotequal

--- a/nablapps/events/templates/events/administer_penalties.html
+++ b/nablapps/events/templates/events/administer_penalties.html
@@ -44,9 +44,9 @@
     <tr>
         <td><label for="user_penalty_{{registration.pk}}">{{ registration.user.get_full_name }}</label></td>
         {% for penalty in event.get_penalty_rule_dict.values %}
-        <td><label style="width: 100%"><input type="radio" class="penalty_table_radio" name="user_penalty_{{registration.pk}}" value="{{ penalty }}" {% ifequal registration.penalty penalty %}checked{% endifequal %}></label></td>
+        <td><label style="width: 100%"><input type="radio" class="penalty_table_radio" name="user_penalty_{{registration.pk}}" value="{{ penalty }}" {% if registration.penalty == penalty %}checked{% endif %}></label></td>
         {% endfor %}
-        <td><label style="width: 100%"><input type="radio" class="penalty_table_radio" name="user_penalty_{{registration.pk}}" value="None" {% ifequal registration.penalty None %}checked{% endifequal %}></label></td>
+        <td><label style="width: 100%"><input type="radio" class="penalty_table_radio" name="user_penalty_{{registration.pk}}" value="None" {% if registration.penalty == None %}checked{% endif %}></label></td>
         <td>
         {% if registration.attendance_registration %}
             Ja
