--- a/templates/comments/preview.html
+++ b/templates/comments/preview.html
@@ -16,7 +16,7 @@
           {% else %}
             {% if field.errors %}
             <p  {% if field.errors %} class="error"{% endif %}
-                    {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
+                    {% if field.name == "honeypot" %} style="display:none;"{% endif %}>
               {{ field.label_tag }}
               {{ field.errors }}
             </p>
