Revert "Merge pull request #664 from Nabla-NTNU/bump-django-4.0"
This reverts commit 59cb025630b75f0cd1d6fa533f755588bb23eca0, reversing
changes made to a40d71c1f40a9ac97cd79f1f25c273269a0342c4.

A critical bug has been detected, so we are rolling back for now.

--- a/nablapps/events/templates/events/event_detail.html
+++ b/nablapps/events/templates/events/event_detail.html
@@ -23,7 +23,7 @@
     <div class="registrations">
         {% for registration in event.eventregistration_set.all %}
         {% with user=registration.user %}
-        <span class="badge {% if user == request.user %} badge-info {% else %} badge-secondary {% endif %}
+        <span class="badge {% ifequal user request.user %} badge-info {% else %} badge-secondary {% endifequal %}
                      {% if registration.waiting %}
                      waiting-place
                      {% endif %}" style="display: inline-block;">
