Revrted Vue to earlier version

--- a/nablapps/vote/templates/vote/register_attendance.html
+++ b/nablapps/vote/templates/vote/register_attendance.html
@@ -1,10 +1,10 @@
 {% extends "base.html"%}
 
 {% block main %}
-    <script src="https://unpkg.com/vue@next"></script>
-    <script src="https://unpkg.com/axios/dist/axios.js"></script>
-    <!-- <script src="https://unpkg.com/vue@3.2.26/dist/vue.global.prod.js"></script> -->
-    <!-- <script src="https://unpkg.com/axios@0.24.0/dist/axios.min.js"></script> -->
+    <!-- <script src="https://unpkg.com/vue@next"></script> -->
+    <!-- <script src="https://unpkg.com/axios/dist/axios.js"></script> -->
+    <script src="https://unpkg.com/vue@3.2.26/dist/vue.global.prod.js"></script>
+    <script src="https://unpkg.com/axios@0.24.0/dist/axios.min.js"></script>
     <div id="attendance-app">
     </div>
     <template id="AttendanceAppTemplate">
