--- a/nablapps/vote/templates/vote/voting_event_user_view.html
+++ b/nablapps/vote/templates/vote/voting_event_user_view.html
@@ -65,10 +65,10 @@
 {% endblock %}
 
 {% block main %}
-    <script src="https://unpkg.com/vue@next"></script>
-    <script src="https://unpkg.com/axios/dist/axios.js"></script>
-    <!-- <script src="https://unpkg.com/vue@3.2.26/dist/vue.global.prod.js"></script> -->
-    <!-- <script src="https://unpkg.com/axios@0.24.0/dist/axios.min.js"></script> -->
+    <!-- <script src="https://unpkg.com/vue@next"></script> -->
+    <!-- <script src="https://unpkg.com/axios/dist/axios.js"></script> -->
+    <script src="https://unpkg.com/vue@3.2.26/dist/vue.global.prod.js"></script>
+    <script src="https://unpkg.com/axios@0.24.0/dist/axios.min.js"></script>
     <h1>{{ object.title  }}</h1>
     <div id="vote-list" >
         <transition-group name="slide-fade">
