activated 'søk undergruppe' knappen

--- a/templates/base.html
+++ b/templates/base.html
@@ -299,11 +299,11 @@
                     </li>
 
                     {# Kan aktiveres igjen ved neste undergruppe-valg #}
-                    {# if user.is_authenticated #}
-                    <!-- <li class="nav-item mr-1 "> -->
-                    <!--     <a class="nav-link text-light" href="/application/">Søk undergruppe</a> -->
-                    <!-- </li> -->
-                    {# endif #}
+                    {% if user.is_authenticated %}
+                    <li class="nav-item mr-1 ">
+                        <a class="nav-link text-light" href="/application/">Søk undergruppe</a>
+                    </li>
+                    {% endif %}
 
                 </ul>
 
