--- a/templates/base.html
+++ b/templates/base.html
@@ -162,7 +162,7 @@
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header pop-up-dark">
                         <h5 class="modal-title" id="exampleModalLongTitle">Ny student?</h5>
@@ -176,10 +176,11 @@
                             Vi har et heidundranes fadderopplegg som vi håper du vil ta del i!
                             Det er derfor veldig viktig at du trykker på knappen under og melder deg på!
                         </p>
-                        <a href="https://forms.gle/7Gg3VFQ3UcesvjJq8"
+                        <a href="https://forms.gle/Sqb83YkNiVTehDfF6"
                            class="btn btn-nabla-blue-dark btn-lg btn-block my-1"
-                           style="white-space:normal">
-                            Trykk her for påmelding til fadderperioden - <b>2023!</b>
+                           style="white-space:normal"
+                           target="_blank">
+                            Trykk her for påmelding til fadderperioden - <b>2024!</b>
                         </a>
                         <p>
                             Påmeldingen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette!
@@ -191,20 +192,37 @@
                                <!--    Trykk her for å registrere deg en bruker på <b>Nabla.no</b>-->
                         <!--</a>-->
                         <div class="list-group">
-                            <a href="https://www.facebook.com/groups/185404571051393/"
-                               class="btn btn-nabla-blue-dark btn-lg btn-block my-1">
-                                Meld deg også inn i facebook-gruppen for fadderperioden 2023 ved å trykke her.
+                            <a href="https://www.facebook.com/groups/441882011632269"
+                               class="btn btn-nabla-blue-dark btn-lg btn-block my-1"
+                               target="_blank">
+                                Meld deg også inn i facebook-gruppen for fadderperioden 2024 ved å trykke her.
                             </a>
-                            <a href="nystudent" class="btn btn-nabla-blue-dark btn-lg btn-block my-1">
+                            <a href="nystudent" class="btn btn-nabla-blue-dark btn-lg btn-block my-1" target="_blank">
                                 Mer informasjon om fadderopplegget finner du ved å trykke her.
                             </a>
-                            <a href="english" class="btn btn-nabla-blue-dark btn-lg btn-block my-1">
+                            <a href="english" class="btn btn-nabla-blue-dark btn-lg btn-block my-1" target="_blank">
                                 <b>New international student?</b> Read more about Nabla on our english pages by clicking here.
                             </a>
                         </div>
-                        <br>
 
-                        <img src="https://nabla.no/media/uploads/content/fadderukekalender-riktig.jpg" style="width: 100%;">
+                        <hr>
+
+                        <img src="https://nabla.no/media/uploads/content/fadderukekalender_2024.jpg" style="width: 100%;">
+
+                        <hr>
+
+                        <p>
+                          Dersom du opplever du noe ubehagelig eller noe du ikke synes ikke er greit i fadderperioden, kan du varsle om dette her.
+                          Det kan gjøres anonymt og du velger selv hvordan saken skal håndteres.
+                        </p>
+                        <a href="varsling"
+                           class="btn btn-nabla-yellow btn-lg btn-block my-1"
+                           style="white-space:normal"
+                           target="_blank">
+                          Trykk her for å varsle
+                        </a>
+
+                        <hr>
 
                         <small>
                             Grunnet personvernsreglene i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla.
