updated the Forslag til styret link

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -24,7 +24,7 @@
         {# Social buttons #}
         <div class="social card card-body card-body-overline">
             {% if logged_in %}
-                <a href="https://forms.gle/oocHdHwP728As8W19" class="btn btn-nabla-blue-dark">
+                <a href="https://forms.gle/cCV9jaJg4ej1LEgY8" class="btn btn-nabla-blue-dark">
                     Forslag til styret
                 </a>
                 <p></p>
