--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -65,6 +65,12 @@
             {% include "officeCalendar/includes/list.html" %}
         </div>
 
+        <div class="leaderboard d-flex flex-column">
+            <h5 class="nabla-frontpage-header">
+                Bedpres leaderboard
+            </h5>
+        </div>
+
         <div class="latest-nablad d-flex flex-column">
             <h5 class="nabla-frontpage-header">
                 Siste Nablad
