Changed meeting times and place
Changed times and place as requested by the board

--- a/nablapps/core/templates/core/general_about.html
+++ b/nablapps/core/templates/core/general_about.html
@@ -6,7 +6,7 @@
         <p class=>
             Nabla er linjeforeningen for sivilingeniørprogrammet Fysikk og matematikk ved NTNU. Du kan lese mer om studiet på NTNU sine nettsider. På denne nettsiden finner du informasjon om studiet, linjeforeningen, og hva som foregår. Ta gjerne turen innom nablakontoret i kontortida for kaffe, vafler og en hyggelig prat. Vi selger også kompendier.
         <br><br>
-            <b>Styremøter torsdager kl.10:15-12:00</b><br>
+            <b>Styremøter tirsdager kl.08:15-10:00 i R41</b><br>
 Styret har ukentlige møter, og her har du som komponent møterett. Om du vil komme innom på et av møtene våre, ta kontakt med et av styremedlemmene, eller hele styret:
 nabla@nabla.no
         </p>
