--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -65,20 +65,7 @@
             {% include "officeCalendar/includes/list.html" %}
         </div>
 
-        <div class="leaderboard d-flex flex-column">
-            <h5 class="nabla-frontpage-header">
-                Bedpres leaderboard
-            </h5> <!-- Ren kok fra code_golf.html -->
-            <table style="width:100%">
-                <tr><th>Bruker</th><th>Antall Bedpres</th></tr>
-                {% for t in bedpres_leaderboard %}
-                <tr>
-                    <td>{{t.first_name}} {{t.last_name}}</td>
-                    <td>{{t.num_bedpres}}</td> <!-- TODO: hva skal stå her istedenfor length???, Funker dette egentlig? -->
-                </tr>
-                {% endfor %}
-            </table>
-        </div>
+        {% include "includes/bedpres_leaderboard.html" %}
 
         <div class="latest-nablad d-flex flex-column">
             <h5 class="nabla-frontpage-header">
