--- a/templates/includes/bedpres_leaderboard.html
+++ b/templates/includes/bedpres_leaderboard.html
@@ -1,14 +1,32 @@
+<style>
+.leaderboard {
+  border-collapse: collapse;
+  width: 100%;
+    height: 100%;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+</style>
+
 <div class="leaderboard d-flex flex-column">
+    {% if logged_in %} <!-- Makes it so that leaderboard does not show up when not logged in -->
             <h5 class="nabla-frontpage-header">
                 Bedpres leaderboard
-            </h5> <!-- Ren kok fra code_golf.html -->
-            <table style="width:100%">
-                <tr><th>Bruker</th><th>Antall Bedpres</th></tr>
+            </h5>
+    <div class="card flex-grow-1 border border-nabla-blue">
+            <table class="leaderboard">
+               <tr><th>Bruker</th><th>Antall Bedpres</th></tr>
                 {% for t in bedpres_leaderboard %}
                 <tr>
                     <td>{{t.first_name}} {{t.last_name}}</td>
-                    <td>{{t.num_bedpres}}</td> <!-- TODO: hva skal stå her istedenfor length???, Funker dette egentlig? -->
+                    <td style="text-align:center">{{t.num_bedpres}}</td>
                 </tr>
                 {% endfor %}
             </table>
         </div>
+    {% endif %}
+</div>
