Changed admin-list text

--- a/nablapps/apply_committee/templates/apply_committee/admin_application_list.html
+++ b/nablapps/apply_committee/templates/apply_committee/admin_application_list.html
@@ -1,7 +1,7 @@
 {% extends "apply_committee/application_list.html" %}
 
 {% block warning %}
-<b>NB! Du er nå i gruppeledermodus. Det vil si at du kan se anonyme søknader.<br />
+<b>NB! Du er nå i gruppeledermodus, og kan se hvem som har søkt hva. <br />
     With great power comes great responsiblity!</b>
 <div><a href="export.csv"><button class="csv">Eksporter til regneark</button></a></div>
 {% endblock warning %}
