--- a/templates/includes/bedpres_leaderboard.html
+++ b/templates/includes/bedpres_leaderboard.html
@@ -16,11 +16,11 @@
 <div class="leaderboard d-flex flex-column">
     {% if logged_in %} <!-- Makes it so that leaderboard does not show up when not logged in -->
             <h5 class="nabla-frontpage-header">
-                Bedpres leaderboard
+                Bedpres-tabellen
             </h5>
     <div class="card flex-grow-1 border border-nabla-blue">
             <table class="leaderboard">
-               <tr><th class="th_leaderboard">Bruker</th><th class="th_leaderboard">Antall Bedpres</th></tr>
+               <tr><th class="th_leaderboard">Komponent</th><th class="th_leaderboard">Antall Bedpres</th></tr>
                 {% for t in bedpres_leaderboard %}
                 <tr>
                     <td class="td_leaderboard">{{t.first_name}} {{t.last_name}}</td>
