fix: update address
Change from "Sæm Sælands vei" to "Sem Sælands vei"

--- a/templates/base.html
+++ b/templates/base.html
@@ -499,7 +499,7 @@
                         <p > <a href="/contact/">Kontaktside</a> <br>
                         Linjeforeningen Nabla <br>
                         Kjemiblokk 2, Realfagsbygget <br>
-                        Sæm Sælands vei 10, NTNU <br>
+                        Sem Sælands vei 10, NTNU <br>
                         7034 Trondheim <br>
                         Norway
                     </p>
