temp: disable contact form

--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -67,7 +67,8 @@ Velg  ITV ved IFY for fysikk eller ITV ved IMF for matte
 <b>For å være anonym lar du feltene "Ditt navn" og "Din e-post" stå tomme.</b>
 </p>
 
-
+Webkom jobber for tiden med å minske mengden spam!
+<!--
 {% if spam_check == True %}
     {% bootstrap_alert "Forsøk å regne kontrollspørsmål på nytt" alert_type="danger" %}
 {% endif %}
@@ -78,5 +79,6 @@ Velg  ITV ved IFY for fysikk eller ITV ved IMF for matte
     {% bootstrap_field contact_form.spam_check placeholder="Svar" %}
     {% bootstrap_button "Send" button_type="submit" %}
 </form>
+-->
 
 {% endblock %}
