--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -29,7 +29,7 @@
                 </a>
                 <p></p>
             {% endif %}
-            <a href="mailto:bedriftskontakt@nabla.no" class="btn btn-nabla-blue-dark">
+            <a href="mailto:bedriftskontakt [Ætt] nabla.no" class="btn btn-nabla-blue-dark">
                 Bedriftsforslag - send en mail til BN
             </a>
             <p></p>
@@ -115,7 +115,7 @@
                 <h4 class="text-nabla-blue">Bedrift?</h4>
                 <p>
                     Sjekk ut <a href="/bedriftskontakten/">bedriftskontakten sine sider</a>, eller ta kontakt med
-                    bedriftskontakten på <a href="mailto:bedkom@nabla.no">bedkom@nabla.no</a>.
+                    bedriftskontakten på <a href="mailto:bedkom [Ætt] nabla.no">bedkom [Ætt] nabla.no</a>.
                 </p>
             </div>
         {% endif %}
