--- a/templates/base.html
+++ b/templates/base.html
@@ -310,6 +310,7 @@
                             <a class="dropdown-item" href="{% url "ex_frontpage" %}">Utveksling</a>
                             <a class="dropdown-item" href="https://drive.google.com/drive/u/0/folders/0AIfT2N9gx5wOUk9PVA">Nablabanken</a>
                             <a class="dropdown-item" href="/contact/rombooking/">Rombooking</a>
+                            <a class="dropdown-item" href="/contact/utstyrbooking/">Utstyrbooking</a>
                         </div>
                     </li>
                     <li class="nav-item mr-1 ">
