--- a/templates/includes/bedpres_leaderboard.html
+++ b/templates/includes/bedpres_leaderboard.html
@@ -3,7 +3,7 @@
   border-collapse: collapse;
   width: 100%;
     height: 100%;
-    grid-area: leaderboard;
+    {% comment %} grid-area: leaderboard; {% endcomment %}
 }
 
 .th_leaderboard, .td_leaderboard {
