removed mail-link in all mailto links

--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -9,9 +9,9 @@
 <div>
     <h3>For bedriftshenvendelser</h3>
     <p>
-    Kontakt bedriftskontakten på <a href="mailto:bedkom [Ætt] nabla.no">bedkom [Ætt] nabla.no</a>.
+    Kontakt bedriftskontakten på <a href="mailto:">bedkom [Ætt] nabla.no</a>.
     <br>
-    Ev. <a href="mailto:eureka [Ætt] nabla.no">eureka [Ætt] nabla.no</a> for henvendelser vedrørende <b>karrieredagen Eureka.</b>
+    Ev. <a href="mailto:">eureka [Ætt] nabla.no</a> for henvendelser vedrørende <b>karrieredagen Eureka.</b>
     </p>
 </div>
 
@@ -22,7 +22,7 @@
     {% for element in board_emails %}
         <tr>
             <th>{{ element.0 }}</th>
-            <td><a href="mailto:{{ element.1 }} [Ætt] nabla.no">{{ element.1 }} [Ætt] nabla.no</a></td>
+            <td><a href="mailto:">{{ element.1 }} [Ætt] nabla.no</a></td>
         </tr>
     {% endfor %}
 </table>
@@ -33,7 +33,7 @@
     {% for element in nabla_pos_emails %}
         <tr>
             <th>{{ element.0 }}</th>
-            <td><a href="mailto:{{ element.1 }} [Ætt] nabla.no">{{ element.1 }} [Ætt] nabla.no</a></td>
+            <td><a href="mailto:">{{ element.1 }} [Ætt] nabla.no</a></td>
         </tr>
     {% endfor %}
 </table>
@@ -44,7 +44,7 @@
     {% for element in group_emails %}
         <tr>
             <th>{{ element.0 }}</th>
-            <td><a href="mailto:{{ element.1 }} [Ætt] nabla.no">{{ element.1 }} [Ætt] nabla.no</a></td>
+            <td><a href="mailto:">{{ element.1 }} [Ætt] nabla.no</a></td>
         </tr>
     {% endfor %}
 </table>
