--- a/nablapps/jobs/templates/jobs/sidebar_include.html
+++ b/nablapps/jobs/templates/jobs/sidebar_include.html
@@ -12,7 +12,7 @@ Vis utløpte: <a href="{{ toggle_expired_link }}" class="text-success fas fa-lg 
 {% endif %}
 
 <h3>Vil du ha stillingsannonsen din her?</h3>
-<p>Ønsker bedriften din å legge ut en stillingsannonse på denne siden, ta kontakt med Bedriftskontakten Nabla på <a href="mailto:bedkom [Ætt] nabla.no">
+<p>Ønsker bedriften din å legge ut en stillingsannonse på denne siden, ta kontakt med Bedriftskontakten Nabla på <a href="mailto:">
 bedkom [Ætt] nabla.no</a>. Les mer om bedriftskontakten <a href="/bedriftskontakten/">her</a>.</p>
 
 {% if jobsidebarinfo %}
