--- a/nablapps/podcast/templates/podcast/includes/sidebar_include.html
+++ b/nablapps/podcast/templates/podcast/includes/sidebar_include.html
@@ -10,7 +10,7 @@
     mailer oss.
 </p>
 <a href="https://www.facebook.com/skraattkast" class="btn btn-info">Facebook</a>
-<a href="mailto:skrattcast [Ætt] nabla.no" class="btn btn-nabla-blue-dark btn-large">Brevsprekken</a>
+<a href="mailto:" class="btn btn-nabla-blue-dark btn-large">Brevsprekken</a>
 <h2>Skråttcast RSS</h2>
 <p>
     Unngå å gå glipp av en ny episode, abonner på Skråttcast med RSS.
