--- a/templates/base.html
+++ b/templates/base.html
@@ -495,7 +495,7 @@
                 </div>
                  <div class="col-lg-3 text-center ">
                     <h2>Kontakt</h2>
-{#                        <a class="email" href="mailto:nabla [Ætt] nabla.no">nabla [Ætt] nabla.no</a>#}
+{#                        <a class="email" href="mailto:">nabla [Ætt] nabla.no</a>#}
                         <p > <a href="/contact/">Kontaktside</a> <br>
                         Linjeforeningen Nabla <br>
                         Kjemiblokk 2, Realfagsbygget <br>
@@ -511,7 +511,7 @@
                     <p>
                     Har du funnet en feil, får du ikke logget på, eller er det noe som burde forbedres? <br>
                     Fyll ut <a href="{% url "feedback" %}">tilbakemeldingskjema</a> eller kontakt webkom:<br>
-                    <a class="email" href="mailto:webkom [Ætt] nabla.no">webkom [Ætt] nabla.no</a>
+                    <a class="email" href="mailto:">webkom [Ætt] nabla.no</a>
                     </p>
                 </div>
 
