--- a/templates/old-front_page.html
+++ b/templates/old-front_page.html
@@ -147,7 +147,7 @@
         </p>
         <h4>Bedrift?</h4>
         <p>
-            Ta kontakt med bedriftskontakten på <a href="mailto:bedkom [Ætt] nabla.no">bedkom [Ætt] nabla.no.</a>
+            Ta kontakt med bedriftskontakten på <a href="mailto:">bedkom [Ætt] nabla.no.</a>
         </p>
     </div
     {% include "poll/poll_include.html" %}
