--- a/nablapps/contact/templates/contact/for_bedrifter.html
+++ b/nablapps/contact/templates/contact/for_bedrifter.html
@@ -126,7 +126,7 @@
     <div class="row pb-4">
 
         <div class="flex-grow-1 card card-body card-body-overline">
-            <p>Ønsker bedriften din å legge ut en stillingsannonse på denne siden, ta kontakt med Bedriftskontakten Nabla på <a href="mailto:bedkom [Ætt] nabla.no">
+            <p>Ønsker bedriften din å legge ut en stillingsannonse på denne siden, ta kontakt med Bedriftskontakten Nabla på <a href="mailto:">
                 bedkom [Ætt] nabla.no</a>. Les mer om bedriftskontakten <a href="https://nabla.no/komite/bedriftskontakten-nabla/">her</a>.</p>
         </div>
 
