Disabled 'Søk undergruppe' button

--- a/templates/base.html
+++ b/templates/base.html
@@ -318,9 +318,9 @@
 
                     {# Kan aktiveres igjen ved neste undergruppe-valg #}
                     {# if user.is_authenticated #}
-                    <li class="nav-item mr-1 ">
+                    <!-- <li class="nav-item mr-1 ">
                         <a class="nav-link text-light" href="/application/">Søk undergruppe</a>
-                    </li>
+                    </li> -->
                     {# endif #}
 
                 </ul>
