Added final text to utstyrbooking, added comment box and changed time selection to dates

--- a/nablapps/contact/templates/contact/utstyrbooking.html
+++ b/nablapps/contact/templates/contact/utstyrbooking.html
@@ -6,7 +6,12 @@
 
 <h1>Utstyrbooking</h1>
 
-<p>Book utstyr ved å sende inn :)</p>
+<p>Book utstyr ved å sende inn :) </p>
+    
+<p> Info om hvor og når utstyret kan hentes kommer på mail ved booking.</p>
+
+<p> PS: Hvis det er mulig å booke flere av utstyret du er ute etter, skriv antallet du ønsker i kommentarboksen. 
+    Det er mulig at utstyret du ønsker å booke er allerede booket, da får du beskjed. </p>
 
 
 
