--- a/templates/base.html
+++ b/templates/base.html
@@ -310,8 +310,15 @@
                             <a class="dropdown-item" href="{% url "ex_frontpage" %}">Utveksling</a>
                             <a class="dropdown-item" href="https://drive.google.com/drive/u/0/folders/0AIfT2N9gx5wOUk9PVA">Nablabanken</a>
                             <a class="dropdown-item" href="/contact/rombooking/">Rombooking</a>
-                            <a class="dropdown-item" href="/contact/utstyrbooking/">Utstyrbooking</a>
+                            <div class="dropdown-submenu">
+                                <a class="dropdown-item dropdown-toggle" href="#">Utlån</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="/contact/utstyrbooking/">Sportskom</a>
+                                    <a class="dropdown-item" href="/contact/utstyrbooking/">Prokom</a>
+                                </div>
+                            </div>
                         </div>
+                        <script src="{% static 'js/dropdown-submenu.js' %}"></script> <!-- Script to enable hover on the submenu Utlån-->
                     </li>
                     <li class="nav-item mr-1 ">
                         <a class="nav-link text-light" href="/contact/for_bedrifter/">For bedrifter</a>
