Utlån submenu now works properly

--- a/templates/base.html
+++ b/templates/base.html
@@ -313,12 +313,13 @@
                             <div class="dropdown-submenu">
                                 <a class="dropdown-item dropdown-toggle" href="#">Utlån</a>
                                 <div class="dropdown-menu">
+                                    {# Lenker under Utlån #}
                                     <a class="dropdown-item" href="/contact/utstyrbooking/">Sportskom</a>
-                                    <a class="dropdown-item" href="/contact/utstyrbooking/">Prokom</a>
+                                    <a class="dropdown-item" href="/utleie/">Prokom</a>
                                 </div>
                             </div>
                         </div>
-                        <script src="{% static 'js/dropdown-submenu.js' %}"></script> <!-- Script to enable hover on the submenu Utlån-->
+                        <script src="{% static 'js/dropdown-submenu.js' %}"></script> <!-- Script to make Utlån submenu clickable-->
                     </li>
                     <li class="nav-item mr-1 ">
                         <a class="nav-link text-light" href="/contact/for_bedrifter/">For bedrifter</a>
