--- a/templates/nablashop/index.html
+++ b/templates/nablashop/index.html
@@ -3,6 +3,9 @@
 {% load easy_thumbnails %}
 {% block content %}
     <h1>Nablashop</h1>
+    
+    Dette er oppslagsverk over produkter Nabla tilbyr til utlån, og nablamerch som kan kjøpes på kontoret.
+
 {% if product_list %}
     <h2>Produkter</h2>
     <div class="row">
