centralized loan forms
* fixed dark mode header footer color

* init Utstyrbooking form

* almost finished sporskom-form,
only missing equipment

* Added final text to utstyrbooking, added comment
box and changed time selection to dates

* format?

* dropdown utlån init

* Utlån submenu now works properly

* clean up of dropdown submenu JS script

---------

Co-authored-by: Mikkel Vaaje-Kolstad <mikkelvk@hotmsil.com>
Co-authored-by: Jonathan Kjørlaug <jonathan@kjorlaug.no>

--- a/templates/base.html
+++ b/templates/base.html
@@ -310,7 +310,16 @@
                             <a class="dropdown-item" href="{% url "ex_frontpage" %}">Utveksling</a>
                             <a class="dropdown-item" href="https://drive.google.com/drive/u/0/folders/0AIfT2N9gx5wOUk9PVA">Nablabanken</a>
                             <a class="dropdown-item" href="/contact/rombooking/">Rombooking</a>
+                            <div class="dropdown-submenu">
+                                <a class="dropdown-item dropdown-toggle" href="#">Utlån</a>
+                                <div class="dropdown-menu">
+                                    {# Lenker under Utlån #}
+                                    <a class="dropdown-item" href="/contact/utstyrbooking/">Sportskom</a>
+                                    <a class="dropdown-item" href="/utleie/">Prokom</a>
+                                </div>
+                            </div>
                         </div>
+                        <script src="{% static 'js/dropdown-submenu.js' %}"></script> <!-- Script to make Utlån submenu clickable-->
                     </li>
                     <li class="nav-item mr-1 ">
                         <a class="nav-link text-light" href="/contact/for_bedrifter/">For bedrifter</a>
